2005-03-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* doc/am-utils.texi (Program Filesystem): if umount/unmount are
	not specified, Amd uses "umount ${fs}" by default.

	* amd/amfs_program.c (amfs_program_match): if neither unmount nor
	umount parameters are specified, use the default userland umount
	program with "umount ${fs}".  This way type:=program doesn't have
	to specify the umount program for basic unmounting actions.
	(amfs_program_init): save unmount program string in mf_private
	only if it's NULL, not based on mf_refc.

	* configure.in: auto-detect name of userland unmount program.

	* aux_conf.h.in (UNMOUNT_PROGRAM): macro for default userland
	unmount program.

	* amd/ops_cachefs.c (cachefs_init): save unmount program string in
	mf_private only if it's NULL, not based on mf_refc.

	* configure.in: don't "discover" inheritance file system any more,
	since we don't have the .c file for it.

	* amd/get_args.c (get_version_string): hack to still show that we
	support the inherit file system in output of amd -v.

2005-03-05  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/amfs_inherit.c: removed, dead code

	* amd/Makefile.am,
	amd/am_ops.c,
	amd/amd.h,
	conf/autofs/autofs_linux.h,
	conf/autofs/autofs_solaris_v1.h,
	conf/autofs/autofs_solaris_v2_v3.h,
	m4/macros/header_templates.m4: removed references to amfs_inherit.c

2005-03-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/autil.c (am_mounted): completely rewrite the unmount
	no/timeout code to (1) make more sense for odd conditions, and (2)
	allow utimeout=N mount options to override FS_NOTIMEOUT default
	flags for disk-based file systems such as ufs, pcfs, cdfs, etc.

	* libamu/mount_fs.c (mount_fs): use safer XFREE() not free().

	* conf/umount/umount_linux.c (umount_fs): strtok is destructive,
	so use strdup'ed string.

	* conf/mount/mount_linux.c (parse_opts): strtok is destructive, so
	use strdup'ed string.

2005-03-04  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd.conf.5, doc/am-utils.texi (cache_duration